fixed spacing

--- a/src/app/modules/controls/components/channel-color-scale/channel-color-scale.component.scss
+++ b/src/app/modules/controls/components/channel-color-scale/channel-color-scale.component.scss
@@ -11,6 +11,10 @@ mat-card {
     padding: 0;
 }
 
+.axis-label {
+    margin-bottom: 0.6rem;
+}
+
 .numberScale {
     display: flex;
     flex-direction: column;
